fix: movement while dialog box is visible

--- a/FinalProject-ChristopherColumbus/front-end/src/styles/styles.css
+++ b/FinalProject-ChristopherColumbus/front-end/src/styles/styles.css
@@ -115,7 +115,7 @@ body {
     /* box-shadow: 0 8px 24px rgba(0,0,0,0.18); */
     box-shadow: #da0f4c;
     z-index: 2000;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     opacity: 0.95;
     pointer-events: none;
     animation: fadeInOut 1.5s;
